--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -285,9 +285,28 @@
         android:id="@+id/accountsCardsFragment"
         android:name="taxi.kassa.view.accounts_cards.AccountsCardsFragment"
         android:label="AccountsCardsFragment"
-        tools:layout="@layout/fragment_accounts">
+        tools:layout="@layout/fragment_accounts_cards">
         <action
             android:id="@+id/action_accountsCardsFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment"
+            app:popEnterAnim="@anim/slide_in_top"
+            app:popExitAnim="@anim/slide_out_top" />
+        <action
+            android:id="@+id/action_accountsCardsFragment_to_accountsFragment"
+            app:destination="@id/accountsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/accountsFragment"
+        android:name="taxi.kassa.view.accounts_cards.accounts.AccountsFragment"
+        android:label="AccountsFragment"
+        tools:layout="@layout/fragment_accounts">
+        <action
+            android:id="@+id/action_accountsFragment_to_notificationsFragment"
             app:destination="@id/notificationsFragment"
             app:popEnterAnim="@anim/slide_in_top"
             app:popExitAnim="@anim/slide_out_top" />
