--- a/app/src/main/res/layout/fragment_instant_withdraw.xml
+++ b/app/src/main/res/layout/fragment_instant_withdraw.xml
@@ -144,7 +144,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/select_card_title"
             tools:itemCount="2"
-            tools:listitem="@layout/item_cardd" />
+            tools:listitem="@layout/item_card" />
 
         <Button
             android:id="@+id/next_button"
