--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -52,7 +52,7 @@
     <ImageView
         android:id="@+id/delete_icon"
         android:layout_width="wrap_content"
-        android:layout_margin="@dimen/margin_16dp"
+        android:padding="@dimen/margin_16dp"
         app:layout_constraintTop_toTopOf="@+id/account_background"
         app:layout_constraintEnd_toEndOf="@id/account_background"
         android:layout_height="wrap_content"
