--- a/app/src/main/res/layout/fragment_accounts_cards.xml
+++ b/app/src/main/res/layout/fragment_accounts_cards.xml
@@ -78,7 +78,8 @@
         android:id="@+id/accounts_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
+        android:layout_marginTop="@dimen/margin_32dp"
         android:text="@string/accounts"
         android:textColor="@color/gray_intro_text"
         android:textSize="@dimen/text_24sp"
@@ -99,7 +100,7 @@
         android:id="@+id/accounts_message"
         android:layout_width="296dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="12dp"
         android:text="@string/accounts_message"
         android:textColor="@color/accounts_dialog_gray"
@@ -110,7 +111,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="12dp"
         android:text="@string/continue_hint"
         android:textColor="@color/blue_color"
@@ -136,7 +137,8 @@
         android:id="@+id/cards_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
+        android:layout_marginTop="@dimen/margin_32dp"
         android:text="@string/cards"
         android:textColor="@color/gray_intro_text"
         android:textSize="@dimen/text_24sp"
@@ -157,7 +159,7 @@
         android:id="@+id/add_card_message"
         android:layout_width="286dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="12dp"
         android:text="@string/add_card_message"
         android:textColor="@color/accounts_dialog_gray"
@@ -168,7 +170,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:text="@string/continue_hint"
         android:textColor="@color/blue_color"
         android:textSize="@dimen/text_14sp"
