--- a/app/src/main/res/layout/fragment_withdraw_create.xml
+++ b/app/src/main/res/layout/fragment_withdraw_create.xml
@@ -110,12 +110,12 @@
         app:layout_constraintTop_toBottomOf="@id/daily_title" />
 
     <TextView
-        android:id="@+id/daily_detailed"
+        android:id="@+id/daily_what_is_it"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_24dp"
-        android:layout_marginTop="12dp"
-        android:text="@string/detailed"
+        android:layout_marginStart="12dp"
+        android:padding="12dp"
+        android:text="@string/what_is_it"
         android:textColor="@color/blue_color"
         android:textSize="@dimen/text_14sp"
         app:layout_constraintStart_toStartOf="@id/daily_background"
@@ -171,12 +171,12 @@
         app:layout_constraintTop_toBottomOf="@id/instant_title" />
 
     <TextView
-        android:id="@+id/instant_detailed"
+        android:id="@+id/instant_what_is_it"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_24dp"
-        android:layout_marginTop="12dp"
-        android:text="@string/detailed"
+        android:layout_marginStart="12dp"
+        android:padding="12dp"
+        android:text="@string/what_is_it"
         android:textColor="@color/blue_color"
         android:textSize="@dimen/text_14sp"
         app:layout_constraintStart_toStartOf="@id/instant_background"
