--- a/app/src/main/res/layout/fragment_accounts_cards.xml
+++ b/app/src/main/res/layout/fragment_accounts_cards.xml
@@ -102,6 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="12dp"
+        android:maxLines="3"
         android:text="@string/accounts_message"
         android:textColor="@color/accounts_dialog_gray"
         android:textSize="@dimen/text_14sp"
@@ -112,10 +113,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_24dp"
-        android:layout_marginTop="12dp"
         android:text="@string/continue_hint"
         android:textColor="@color/blue_color"
         android:textSize="@dimen/text_14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/accounts_background"
         app:layout_constraintStart_toStartOf="@id/accounts_background"
         app:layout_constraintTop_toBottomOf="@+id/accounts_message" />
 
