added error if user input less than 20 symbols

--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -278,6 +278,7 @@
                         android:backgroundTint="@color/gray_profile"
                         android:imeOptions="actionNext"
                         android:inputType="number"
+                        android:maxLength="20"
                         android:maxLines="1"
                         android:textColor="@color/gray_intro_text"
                         android:textColorHint="@color/gray_profile"
@@ -307,6 +308,7 @@
                         android:backgroundTint="@color/gray_profile"
                         android:imeOptions="actionDone"
                         android:inputType="number"
+                        android:maxLength="20"
                         android:maxLines="1"
                         android:textColor="@color/gray_intro_text"
                         android:textColorHint="@color/gray_profile"
