--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -45,9 +45,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_24dp"
             android:layout_marginTop="28dp"
+            android:layout_marginEnd="@dimen/margin_24dp"
             android:textColor="@color/gray_intro_text"
             android:textSize="@dimen/text_24sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/notification_title"
             tools:text="Уважаемые водители!" />
@@ -62,7 +64,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title_tv"
-            tools:text="@string/daily_withdrawal_dialog_message" />
+            tools:text="@tools:sample/lorem/random" />
 
         <Button
             android:id="@+id/ok_button"
