--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -43,9 +43,9 @@
             android:paddingTop="3dp"
             android:textColor="@android:color/black"
             android:textStyle="bold"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="3" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/notification_image"
@@ -56,8 +56,7 @@
             android:padding="@dimen/margin_16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_notification"
-            tools:visibility="invisible" />
+            app:srcCompat="@drawable/ic_notification" />
 
         <ImageView
             android:id="@+id/background"
