--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,6 +49,7 @@
                 android:paddingTop="3dp"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="3" />
@@ -62,8 +63,7 @@
                 android:padding="@dimen/margin_16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_notification"
-                tools:visibility="invisible" />
+                app:srcCompat="@drawable/ic_notification" />
 
             <TextView
                 android:id="@+id/name_tv"
