--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -147,19 +147,22 @@
 
         <TextView
             android:id="@+id/withdraw_yandex_tv"
-            android:layout_width="104dp"
-            android:layout_height="44dp"
-            android:layout_marginTop="36dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_registration_btn"
             android:fontFamily="sans-serif"
             android:gravity="center"
-            android:padding="8dp"
+            android:paddingStart="@dimen/margin_18dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="@dimen/margin_18dp"
+            android:paddingBottom="12dp"
             android:text="@string/withdraw"
             android:textColor="@color/gray_intro_text"
             android:textSize="@dimen/text_16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/yandex_image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/background" />
+            app:layout_constraintTop_toTopOf="@+id/yandex_image" />
 
 
         <ImageView
@@ -199,19 +202,22 @@
 
         <TextView
             android:id="@+id/withdraw_citymobil_tv"
-            android:layout_width="104dp"
-            android:layout_height="44dp"
-            android:layout_marginTop="26dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_registration_btn"
             android:fontFamily="sans-serif"
             android:gravity="center"
-            android:padding="8dp"
+            android:paddingStart="@dimen/margin_18dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="@dimen/margin_18dp"
+            android:paddingBottom="12dp"
             android:text="@string/withdraw"
             android:textColor="@color/gray_intro_text"
             android:textSize="@dimen/text_16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/citymobil_image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/withdraw_yandex_tv" />
+            app:layout_constraintTop_toTopOf="@+id/citymobil_image" />
 
 
         <ImageView
@@ -251,19 +257,22 @@
 
         <TextView
             android:id="@+id/withdraw_gett_tv"
-            android:layout_width="104dp"
-            android:layout_height="44dp"
-            android:layout_marginTop="26dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_registration_btn"
             android:fontFamily="sans-serif"
             android:gravity="center"
-            android:padding="8dp"
+            android:paddingStart="@dimen/margin_18dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="@dimen/margin_18dp"
+            android:paddingBottom="12dp"
             android:text="@string/withdraw"
             android:textColor="@color/gray_intro_text"
             android:textSize="@dimen/text_16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/gett_image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/withdraw_citymobil_tv" />
+            app:layout_constraintTop_toTopOf="@+id/gett_image" />
 
 
         <TextView
@@ -316,13 +325,16 @@
 
         <TextView
             android:id="@+id/replenish_rosneft_tv"
-            android:layout_width="104dp"
-            android:layout_height="44dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_registration_btn"
             android:fontFamily="sans-serif"
             android:gravity="center"
-            android:padding="8dp"
+            android:paddingStart="@dimen/margin_18dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="@dimen/margin_18dp"
+            android:paddingBottom="12dp"
             android:text="@string/replenish"
             android:textColor="@color/gray_intro_text"
             android:textSize="@dimen/text_16sp"
