--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -116,20 +116,11 @@
         android:id="@+id/authSignUpFragment"
         android:name="taxi.kassa.view.auth.auth_sign_up.AuthSignUpFragment"
         android:label="AuthSignUpFragment"
-        tools:layout="@layout/fragment_auth_sign_up">
-        <action
-            android:id="@+id/action_authSignUpFragment_to_successRequestFragment"
-            app:destination="@id/successRequestFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"
-            app:popUpTo="@id/introFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_auth_sign_up" />
 
     <fragment
         android:id="@+id/successRequestFragment"
-        android:name="taxi.kassa.view.auth.auth_sign_up.SuccessRequestFragment"
+        android:name="taxi.kassa.view.registration.connection.SuccessRequestFragment"
         android:label="SuccessRequestFragment"
         tools:layout="@layout/fragment_success_request" />
 
